# db-migratons

./: .gitignore  README.md  config.example.yml  config.mysql-to-postgres.yml  config.postgres-to-mysql.yml  migrate.sh  pyproject.toml
migrations/: mysql_to_postgres.py  mysql_to_sqlite.py  sqlite_to_mysql.py  sqlite_to_postgres.py  universal.py
