[project]
name = "db-migratons"
version = "0.1.0"
description = "A powerful, universal database migration tool supporting migrations between PostgreSQL, MySQL/MariaDB, and SQLite databases."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.43",
]
